--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,3 +14,32 @@ pipeline {
         }
     }
 }
+
+maven stage:
+
+pipeline {
+    
+    agent { label 'master'}
+
+    tools {
+        jdk 'java8'
+        maven 'maven 3.3.9'
+    }    
+
+    stages {
+        
+        stage('git clone') {
+            steps {
+                // Get some code from a GitHub repository
+                git 'https://github.com/Chandu8866/game-of-life.git'
+            }
+         }
+         stage('maven build') {
+            steps {
+                // Get some code from a GitHub repository
+                sh 'mvn clean install -U -Dmaven.test.skip-true'
+            }
+         }
+
+    }
+}
